fixed user information not showing with picture

--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -14,12 +14,11 @@
   }
 
   img {
-    max-width: 80%;
+    max-width: 60%;
     height: auto;
-    padding: 20px;
+    padding: 10px;
     border-radius: 30px;
     align-self: center;
-    
   }
   
   button {
@@ -35,8 +34,9 @@
     font-size: 18px;
   }
 
-  h1,h2 {
+  h1 {
     text-shadow: 0 0 3px #fff, 0 0 10px #fff, 0 0 10px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
+    padding-top: 20px;
   }
   
   a {
@@ -47,4 +47,9 @@
   
   button:hover, a:hover {
     opacity: 0.7;
+  }
+
+  section h1, h2 {
+    text-shadow: 0 0 3px #fff, 0 0 10px #fff, 0 0 10px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
+    padding-bottom: 10px;
   }
